--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,7 +24,7 @@
           "MYSQL_PORT": "3306",
           "MYSQL_USER": "root",
           "MYSQL_PASS": "ujkxco2920@",
-          "MYSQL_DB": "sarasvishva"
+          "MYSQL_DB": "karyapravah"
         }
       }
     ]
